Closed
Bug 728028
Opened 14 years ago
Closed 14 years ago
simile timeplot display regressed between firefox 10 and 12
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
VERIFIED
FIXED
mozilla13
People
(Reporter: axel, Assigned: jrmuizel)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
3.41 KB,
patch
|
mattwoodrow
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
The timeplot we use on the l10n dashboard doesn't show up correctly on aurora and nightly, but works fine on 10.
https://l10n-stage-sj.mozilla.org/dashboard/tree-status/fx_aurora?&bound=7&hideBad shows that, the grey graph seems to be upside down.
Filing in canvas as that's what's actually drawing, didn't do a ton of investigation myself so far.
Comment 1•14 years ago
|
||
m-c regression range seems to be http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=005488525c43&tochange=402b394b6623
Unfortunately, there's a huge number of changes in there. :(
Comment 2•14 years ago
|
||
Axel, are you on Mac? I can't seem to reproduce this on Linux, but I do see it on Mac...
| Reporter | ||
Comment 3•14 years ago
|
||
Yes, I'm on mac.
Comment 4•14 years ago
|
||
Yeah, definitely not reproducible on Linux. I guess we get to bisect on Mac. :(
Updated•14 years ago
|
OS: All → Mac OS X
Comment 5•14 years ago
|
||
The first bad revision is:
changeset: 85317:3c47bcef2ce4
user: Jeff Muizelaar <jmuizelaar@mozilla.com>
date: Tue Jan 24 15:14:50 2012 -0500
summary: Bug 720721. Properly transform the clip path in DrawTargetCG. r=mwoodrow
Comment 6•14 years ago
|
||
Jeff M - this looks like a novel regression in FF12 from some of your work. tracking-firefox12+ and can you tell us the cost of backing out the offending changeset, and/or suggest some other remedy?
Updated•14 years ago
|
| Assignee | ||
Comment 7•14 years ago
|
||
When we fixed transformed clips it caused us to double transform gradients. We fix this by avoiding ::PushClip when drawing gradients. This has the advantage of saving a save and restore pair and it makes Fill() more closely match Stroke()
Attachment #599878 -
Flags: review?(matt.woodrow)
Updated•14 years ago
|
Attachment #599878 -
Flags: review?(matt.woodrow) → review+
Comment 8•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
Updated•14 years ago
|
Assignee: nobody → jmuizelaar
| Assignee | ||
Comment 10•14 years ago
|
||
Comment on attachment 599878 [details] [diff] [review]
Another rememdy
[Approval Request Comment]
Regression caused by (bug #): 720721
User impact if declined: Gradients may draw in the wrong spot
Testing completed (on m-c, etc.): on m-c, test case included
Risk to taking this patch (and alternatives if risky): Low, the new code is easier to reason about than the old code
String changes made by this patch: none
Attachment #599878 -
Flags: approval-mozilla-aurora?
Comment 11•14 years ago
|
||
Comment on attachment 599878 [details] [diff] [review]
Another rememdy
[Triage Comment]
Low risk, verified fix for Aurora 12.
Attachment #599878 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Comment 12•14 years ago
|
||
status-firefox12:
--- → fixed
status-firefox13:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•